# ReelTime_FaceRecognition

./: CMakeLists.txt  README.md
data/: crop_face.py
src/: create_csv.py  main.cpp
